fix: correção de funções de login, na rota /autenticarUsuario

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,12 @@
 <body style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; margin: 0;">
     <h1>Página Principal</h1>
     <div>
-        <a href="/cadastrarUsuario">
+        <a href="cadastrarUsuario">
             <button type="button">Cadastrar Usuário</button>
         </a>
     </div>
     <div>
-        <a href="login">
+        <a href="autenticarUsuario">
             <button type="button">Login</button>
         </a>
     </div>
