--- a/templates/paginaLogin.html
+++ b/templates/paginaLogin.html
@@ -12,7 +12,7 @@
             <button type="button">Home</button>
         </a>
     </div>
-    <form action="/login" method="post" style="display: flex; flex-direction: column; align-items: flex-start; width: 300px;">
+    <form action="/autenticarUsuario" method="post" style="display: flex; flex-direction: column; align-items: flex-start; width: 300px;">
         <div>
             <label for="loginUsuario">E-mail:</label>
             <input type="email" name="loginUsuario" />
