feat: implementado middleware de login

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
         </a>
     </div>
     <div>
-        <a href="/listarConvidados">
+        <a href="listarUsuarios">
             <button type="button">Listar Usuários</button>
         </a>
     </div>
