--- a/templates/paginaLogin.html
+++ b/templates/paginaLogin.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; margin: 0;">
+    {{
+        mensagem 
+    }}
     <h1>Login</h1>
     <div>
         <a href="/">
