fix: correção de rota de listarUsuarios para listarConvidados

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,8 @@
         </a>
     </div>
     <div>
-        <a href="listarUsuarios">
-            <button type="button">Listar Usuários</button>
+        <a href="listarConvidados">
+            <button type="button">Listar Convidados</button>
         </a>
     </div>
     <div>
