--- a/templates/listarConvidados.html
+++ b/templates/listarConvidados.html
@@ -11,7 +11,7 @@
             <button type="button">Home</button>
         </a>
     </div>
-    <h1>Lista de Usuários</h1>
+    <h1>Lista de Convidados</h1>
     <ul>
         {%for convidado in convidados %}
             <li> {{ convidado }} </li>
