feat: implementação de criação de tabela, funções e página de cadastrar convidado

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,11 @@
         </a>
     </div>
     <div>
+        <a href="cadastrarConvidado">
+            <button type="button">Cadastrar Convidado</button>
+        </a>
+    </div>
+    <div>
         <a href="recuperarSenha">
             <button type="button">Esqueci a Senha</button>
         </a>
