refactor: remoção de função login

--- a/templates/paginaRecuperarSenha.html
+++ b/templates/paginaRecuperarSenha.html
@@ -14,8 +14,8 @@
     </div>
     <form action="/recuperarSenha" method="post" style="display: flex; flex-direction: column; align-items: flex-start; width: 300px;">
         <div>
-            <label for="nomeUsuario">Informe o nome que você deseja recuperar a senha:</label>
-            <input type="text" name="nomeUsuario" />
+            <label for="emailUsuario">Informe seu email para recuperar sua senha:</label>
+            <input type="text" name="emailUsuario" />
         </div>
         <div>
             <button type="submit">Enviar Recuperação</button>
