--- a/templates/paginaRecuperarSenha.html
+++ b/templates/paginaRecuperarSenha.html
@@ -15,7 +15,7 @@
     <form action="/recuperarSenha" method="post" style="display: flex; flex-direction: column; align-items: flex-start; width: 300px;">
         <div>
             <label for="emailUsuario">Informe seu email para recuperar sua senha:</label>
-            <input type="text" name="emailUsuario" />
+            <input type="text" name="emailUsuario" required/>
         </div>
         <div>
             <button type="submit">Enviar Recuperação</button>
