--- a/templates/paginaRemoverUsuario.html
+++ b/templates/paginaRemoverUsuario.html
@@ -14,7 +14,7 @@
     </div>
     <form action="/removerUsuario" method="post">
         <label for="loginUsuario">Login a ser removido:</label>
-        <input type="email" name="loginUsuario" />
+        <input type="email" name="loginUsuario" required/>
         <div>
             <button type="submit">Remover</button>
         </div>  
