--- a/templates/paginaAlterarSenha.html
+++ b/templates/paginaAlterarSenha.html
@@ -15,15 +15,15 @@
         <form action="/alterarSenha" method="post" style="display: flex; flex-direction: column; align-items: flex-start; width: 300px;">
         <div>
             <label for="nomeUsuario">Senha Atual:</label>
-            <input type="password" name="senhaAntiga" />
+            <input type="password" name="senhaAntiga" required/>
         </div>
         <div>
             <label for="senhaNova1">Nova Senha:</label>
-            <input type="password" name="senhaNova1" />
+            <input type="password" name="senhaNova1" required/>
         </div>
         <div>
             <label for="senhaNova2">Confirme a Nova Senha:</label>
-            <input type="password" name="senhaNova2" />
+            <input type="password" name="senhaNova2" required/>
         </div>
         <div>
             <button type="submit">Confirmar Alteração de Senha</button>
