--- a/templates/paginaCadastroConvidado.html
+++ b/templates/paginaCadastroConvidado.html
@@ -17,7 +17,7 @@
     <form action="/cadastrarConvidado" method="post" style="display: flex; flex-direction: column; align-items: flex-start; width: 300px;">
         <div>
             <label for="nomeConvidado">Nome:</label>
-            <input type="text" name="nomeConvidado" />
+            <input type="text" name="nomeConvidado" required/>
         </div>
         <div>
             <button type="submit">Cadastrar Convidado</button>
