--- a/templates/paginaCadastroUsuario.html
+++ b/templates/paginaCadastroUsuario.html
@@ -17,15 +17,15 @@
     <form action="/cadastrarUsuario" method="post" style="display: flex; flex-direction: column; align-items: flex-start; width: 300px;">
         <div>
             <label for="nomeUsuario">Nome:</label>
-            <input type="text" name="nomeUsuario" />
+            <input type="text" name="nomeUsuario" required/>
         </div>
         <div>
             <label for="loginUsuario">E-mail:</label>
-            <input type="email" name="loginUsuario" />
+            <input type="email" name="loginUsuario" required/>
         </div>
         <div>
             <label for="senhaUsuario">Senha:</label>
-            <input type="password" name="senhaUsuario" />
+            <input type="password" name="senhaUsuario" required/>
         </div>
         <div>
             <button type="submit">Cadastrar Usuário</button>
