--- a/templates/paginaVerificarUsuario.html
+++ b/templates/paginaVerificarUsuario.html
@@ -14,7 +14,7 @@
     </div>
     <form action="/verificarUsuario" method="post">
         <label for="nomeUsuario">Nome:</label>
-        <input type="text" name="nomeUsuario" />
+        <input type="text" name="nomeUsuario" required/>
         <div>
             <button type="submit">Bsucar</button>
         </div>  
