feat: endpoint de buscar convidado na listar pelo nome

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
         </a>
     </div>
     <div>
-        <a href="verificarUsuario">
+        <a href="buscarConvidado">
             <button type="button">Verificar Convidado na Lista</button>
         </a>
     </div>
