feat: implementação da rota de remover convidado

--- a/templates/listarConvidados.html
+++ b/templates/listarConvidados.html
@@ -13,8 +13,14 @@
     </div>
     <h1>{{ titulo }}</h1>
     <ul>
-        {%for nome_convidado, nome_atendente in convidados %}
-            <li>{{ nome_convidado }} - Cadastrado por: {{ nome_atendente }}</li>
+        {%for id_convidado, nome_convidado, nome_atendente in convidados %}
+            <li>
+                {{ nome_convidado }} - Cadastrado por: {{ nome_atendente }}
+                <form action="{{ url_for('removerConvidado') }}" method="POST" style="display:inline;">
+                    <input type="hidden" name="id" value="{{ id_convidado }}">
+                    <button type="submit">Excluir</button>
+                </form>
+            </li>
         {% endfor %}
     </ul>
 </body>
