--- a/templates/paginaRemoverUsuario.html
+++ b/templates/paginaRemoverUsuario.html
@@ -12,9 +12,9 @@
             <button type="button">Home</button>
         </a>
     </div>
-    <form action="/removerUsuario" method="post">
-        <label for="loginUsuario">Login a ser removido:</label>
-        <input type="email" name="loginUsuario" required/>
+    <form action="/removerConvidado" method="post">
+        <label for="nomeConvidado">Login a ser removido:</label>
+        <input type="email" name="nomeConvidado" required/>
         <div>
             <button type="submit">Remover</button>
         </div>  
