refactor: separação de home geral para logado e deslogado

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,12 @@
     <title>Document</title>
 </head>
 <body style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; margin: 0;">
-    <h1>Página Principal</h1>
+    <h1>Página Deslogado</h1>
+    <p>
+        {{
+        mensagem 
+        }}
+    </p>
     <div>
         <a href="cadastrarUsuario">
             <button type="button">Cadastrar Usuário</button>
@@ -18,33 +23,8 @@
         </a>
     </div>
     <div>
-        <a href="cadastrarConvidado">
-            <button type="button">Cadastrar Convidado</button>
-        </a>
-    </div>
-    <div>
         <a href="recuperarSenha">
             <button type="button">Esqueci a Senha</button>
-        </a>
-    </div>
-    <div>
-        <a href="listarConvidados">
-            <button type="button">Listar Convidados</button>
-        </a>
-    </div>
-    <div>
-        <a href="buscarConvidado">
-            <button type="button">Verificar Convidado na Lista</button>
-        </a>
-    </div>
-    <div>
-        <a href="removerUsuario">
-            <button type="button">Remover Usuário</button>
-        </a>
-    </div>
-    <div>
-        <a href="alterarSenha">
-            <button type="button">Alterar Senha</button>
         </a>
     </div>
 </body>
