--- a/templates/paginaAlterarSenha.html
+++ b/templates/paginaAlterarSenha.html
@@ -7,8 +7,8 @@
 </head>
 <body style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; margin: 0;">
     <h1>Alterar a Senha</h1>
-        <div>
-        <a href="/">
+    <div>
+        <a href="/logado">
             <button type="button">Home</button>
         </a>
     </div>
