--- a/templates/paginaCadastroConvidado.html
+++ b/templates/paginaCadastroConvidado.html
@@ -10,7 +10,7 @@
         <h1>Página de Cadastro de Convidado</h1>
     </div>
     <div>
-        <a href="/">
+        <a href="/logado">
             <button type="button">Home</button>
         </a>
     </div>
