--- a/templates/paginaRecuperarSenha.html
+++ b/templates/paginaRecuperarSenha.html
@@ -7,6 +7,9 @@
 </head>
 <body style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; margin: 0;">
     <h1>Recuperação de Senha</h1>
+    <p>
+        {{ mensagem }}
+    </p>
     <div>
         <a href="/">
             <button type="button">Home</button>
