--- a/templates/paginaBuscarConvidado.html
+++ b/templates/paginaBuscarConvidado.html
@@ -8,7 +8,7 @@
 <body style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; margin: 0;">
     <h1>Buscar Convidado</h1>
     <div>
-        <a href="/">
+        <a href="/logado">
             <button type="button">Home</button>
         </a>
     </div>
