--- a/templates/paginaCadastroUsuario.html
+++ b/templates/paginaCadastroUsuario.html
@@ -14,6 +14,11 @@
             <button type="button">Home</button>
         </a>
     </div>
+    <p>
+        {{
+        mensagem 
+        }}
+    </p>
     <form action="/cadastrarUsuario" method="post" style="display: flex; flex-direction: column; align-items: flex-start; width: 300px;">
         <div>
             <label for="nomeUsuario">Nome:</label>
