--- a/templates/resultado.html
+++ b/templates/resultado.html
@@ -7,7 +7,7 @@
 </head>
 <body style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; margin: 0;">
     <div>
-        <a href="/">
+        <a href="/logado">
             <button type="button">Home</button>
         </a>
     </div>
@@ -17,6 +17,5 @@
     {{
         mensagem 
     }}
-    <P ></P>
 </body>
 </html>
