feat: implementação de rota deslogar

--- a/templates/indexLogado.html
+++ b/templates/indexLogado.html
@@ -32,5 +32,10 @@
             <button type="button">Alterar Senha</button>
         </a>
     </div>
+    <div>
+        <a href="deslogar">
+            <button type="button">Logout</button>
+        </a>
+    </div>
 </body>
 </html>
